# ryans-repos

./: .gitignore  README.md
.github/misc/: repos.conf
.github/scripts/: modify-profiles.sh  pkgcheckResult2Markdown.sh
.github/workflows/: pkgcheck.yaml
acct-group/bark-server/: bark-server-0.ebuild
acct-group/cryptpad/: cryptpad-0.ebuild
acct-group/dendrite/: dendrite-0.ebuild
acct-group/derper/: derper-0.ebuild
acct-group/etherpad-lite/: etherpad-lite-0.ebuild
acct-group/filebrowser/: filebrowser-0.ebuild
acct-group/hedgedoc/: hedgedoc-0.ebuild
acct-group/ip7/: ip7-0.ebuild
acct-group/keycloak/: keycloak-0.ebuild
acct-group/matterbridge/: matterbridge-0.ebuild
acct-user/bark-server/: bark-server-0.ebuild
acct-user/cryptpad/: cryptpad-0.ebuild
acct-user/dendrite/: dendrite-0.ebuild
acct-user/derper/: derper-0.ebuild
acct-user/etherpad-lite/: etherpad-lite-0.ebuild
acct-user/filebrowser/: filebrowser-0.ebuild
acct-user/hedgedoc/: hedgedoc-0.ebuild
acct-user/ip7/: ip7-0.ebuild
acct-user/keycloak/: keycloak-0.ebuild
acct-user/matterbridge/: matterbridge-0.ebuild
app-admin/z16/: Manifest  metadata.xml  z16-9999.ebuild
app-crypt/keybase/: Manifest  keybase-6.0.2-r1.ebuild  keybase-6.0.2.ebuild  keybase-6.2.4.ebuild  metadata.xml
app-eselect/eselect-go/: Manifest  eselect-go-20230312.ebuild  eselect-go-20240203.ebuild  metadata.xml
eclass/: go.eclass  npm.eclass  version.eclass
licenses/: Tencent-QQ
metadata/: layout.conf
profiles/: package.mask  repo_name  thirdpartymirrors
sys-apps/openrazer_test/files/: meson.build
(+472 files in other folders)
